# infinite-canvas-creator

./: .env.local  index.html  package-lock.json  tailwind.config.ts
backend/: .env.example  Cargo.toml
backend/migrations/: 20240101000001_initial_schema.sql
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/handlers/: ai_proxy.rs  auth.rs  mod.rs  nodes.rs  projects.rs  variations.rs
backend/src/middleware/: auth.rs
backend/src/models/: canvas_node.rs  mod.rs  project.rs  ui_variation.rs  user.rs
backend/src/routes/: mod.rs
src/: App.tsx  index.css
src/components/canvas/: ApiVisualEditor.tsx  AssemblyPanel.tsx  CanvasConnections.tsx  CanvasNodeCard.tsx  CanvasToolbar.tsx  CliVisualEditor.tsx  CodeEditor.tsx  DatabaseVisualEditor.tsx  ElementsTemplatesPanel.tsx  EnvVisualEditor.tsx  InfiniteCanvas.tsx  ModelSelector.tsx  PaymentVisualEditor.tsx  PreviewSelectionPanel.tsx  ProjectsPanel.tsx  PropertiesPanel.tsx  SettingsModal.tsx  VisualEditor.tsx  assembleHtml.ts  generateVariations.ts
src/lib/: layout.ts  projectsApi.ts  supabase.ts
src/pages/: Auth.tsx  Index.tsx
src/stores/: authStore.ts  canvasStore.ts  projectStore.ts
supabase/migrations/: 20260219110407_canvas_ide_schema_v2.sql
