[package]
name = "canvas-ide-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "canvas-ide-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"

argon2 = "0.5"

uuid = { version = "1", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "1"
anyhow = "1"

sha2 = "0.10"
hex = "0.4"

aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
